feat: premieres section +fontawesome5

--- a/vars.tex
+++ b/vars.tex
@@ -1,11 +1,49 @@
 % === Informations personnelles ===
 \newcommand{\myname}{Siegfried Sekkai}
-\newcommand{\myjob}{Ingénieur Cloud & DevOps}
-\newcommand{\mymail}{ton.mail@example.com}
-\newcommand{\mygithub}{github.com/tonpseudo}
-\newcommand{\mylocation}{Bordeaux, France}
+\newcommand{\myjob}{DevOps Engineer – Cloud / SRE}
+\newcommand{\mymail}{siegfried@5136.fr}
+\newcommand{\myphone}{+33 667 102 007}
+\newcommand{\mygithub}{https://github.com/5136Siegfried}
+\newcommand{\mylocation}{Mérignac, France}
+\newcommand{\mylangues}{Français, Anglais, Allemand}
+\newcommand{\mypermis}{Permis A / B}
+\newcommand{\mylinkedin}{https://www.linkedin.com/in/siegfried-sekkai/}
 
 % === Profil ===
 \newcommand{\myprofil}{%
-Ingénieur passionné par les infrastructures résilientes, l'automatisation et le lien entre technologie et impact humain.%
+Avec 8 ans d'expérience dans le Cloud et l'international, et 1 an d’entrepreneuriat, je souhaite m'engager dans des projets IT ambitieux intégrant IaaC, QA, NoCode, scripting, DevOps et MCO.\\
+Je recherche des projets stimulants, portés par des équipes bienveillantes, avec des valeurs humaines fortes, notamment liées à l'esprit de la sécurité civile.
+}
+
+% === Compétences ===
+\newcommand{\mytechskills}{%
+\begin{multicols}{2}
+\begin{itemize}[leftmargin=1.2em]
+
+  \item \faCloud{} \textbf{Cloud & Conteneurs} \\
+  AWS (avancé), GCP, OVH, Kubernetes, Docker, SQL, MongoDB, Kustomize
+
+  \item \faCogs{} \textbf{Infrastructure as Code} \\
+  Terraform, Ansible, Packer, Vagrant
+
+  \item \faSyncAlt{} \textbf{CI/CD} \\
+  GitLab CI (avancé), GitHub Actions, Jenkins, Maven, Nexus
+
+  \item \faChartLine{} \textbf{Observabilité} \\
+  CloudWatch, X-Ray, Grafana, Prometheus, Kibana, Datadog
+
+  \item \faVial{} \textbf{Tests \& QA} \\
+  JMeter, Selenium, ISTQB Agile, OctoPerf, HP LoadRunner
+
+  \item \faShoppingCart{} \textbf{Web \& eCommerce} \\
+  Shopify, Magento, React, ExpressJS
+
+  \item \faShieldAlt{} \textbf{Sécurité} \\
+  Audit, remédiation, PRA, sécurité physique
+
+  \item \faPuzzlePiece{} \textbf{Autres} \\
+  NoCode (Make, Notion), Prompting LLM, PSE2
+
+\end{itemize}
+\end{multicols}
 }
