chore: cv improvements

--- a/cv.tex
+++ b/cv.tex
@@ -27,6 +27,9 @@
 \section*{Profil}
 \myprofil
 
+\section*{Compétences techniques}
+\mytechskills
+
 \section*{Expérience}
 
 \textbf{Architecte Cloud Freelance} \hfill 2023 – aujourd’hui \\
@@ -36,13 +39,7 @@ Travail sur des projets d’infrastructure scalable, GitOps, SRE, CI/CD.
 
 \textbf{Google Cybersecurity Professional Certificate} — Coursera \hfill 2025
 
-\section*{Compétences}
 
-\begin{itemize}[leftmargin=1.2em]
-    \item DevOps : Docker, Kubernetes, GitLab CI, Terraform
-    \item Cloud : AWS, GCP, Azure
-    \item Observabilité : Prometheus, Grafana, ELK
-    \item SecOps : Sécurité, PCA/PRA, gestion des secrets
-\end{itemize}
+
 
 \end{document}
