--- a/vars.tex
+++ b/vars.tex
@@ -1,6 +1,6 @@
 % === Informations personnelles ===
 \newcommand{\myname}{Siegfried Sekkai}
-\newcommand{\myjob}{DevOps Engineer – Cloud / SRE}
+\newcommand{\myjob}{DevOps Engineer – Cloud / SRE - QA }
 \newcommand{\mymail}{siegfried@5136.fr}
 \newcommand{\myphone}{+33 667 102 007}
 \newcommand{\mygithub}{https://github.com/5136Siegfried}
@@ -11,6 +11,10 @@
 
 % === Profil ===
 \newcommand{\myprofil}{%
+La fiabilité est le fruit d’un savoir partagé. La résilience, celle d’un chemin parcouru ensemble.}
+
+% === Profil ===
+\newcommand{\mytagline}{%
 Avec 8 ans d'expérience dans le Cloud et l'international, et 1 an d’entrepreneuriat, je souhaite m'engager dans des projets IT ambitieux intégrant IaaC, QA, NoCode, scripting, DevOps et MCO.\\
 Je recherche des projets stimulants, portés par des équipes bienveillantes, avec des valeurs humaines fortes, notamment liées à l'esprit de la sécurité civile.
 }
@@ -46,4 +50,41 @@ Je recherche des projets stimulants, portés par des équipes bienveillantes, av
 
 \end{itemize}
 \end{multicols}
+}
+
+% === Expériences professionnelles ===
+\newcommand{\myexperiences}{%
+\textbf{Infrasculptor – QA Ops / NoCoder / CMS Integrator} \hfill \textit{2023 – Aujourd’hui}\\
+Maintenance, performance, automatisation. Déploiement K8s, IaC (Terraform) sur AWS, GCP, OVH.\\
+Clients : MeubleUnique, Recondiphone, CSOR.\\
+Stack : GitLab CI, Terraform, Ansible, Docker, Grafana, Prometheus, Shopify.
+
+\vspace{3mm}
+\textbf{Hygiecare – Co-fondateur} \hfill \textit{Octobre 2023 – Février 2024}\\
+Création d'une plateforme de formation aux premiers secours (IA, gamification, MVP validé BPI).
+
+\vspace{3mm}
+\textbf{Administrateur - Secourisme (via CSOR / Protection Civile)} \hfill \textit{2021 – 2025}\\
+Gestion d'équipe déployées 5 fois par semaines composés de soignants et secouristes ( 50 Personnes).\\
+Rédaction et mise en place de protocoles sanitaires avec la PASS St Andrée / ONI / InterAsso.\\
+Elaboration de Diagnostics Sanitaires et analyse des risques et besoins.\\
+Instauration d'une culture AGILE et Formations au Secourisme.
+
+\vspace{3mm}
+\textbf{SKALE-5 – Cloud Engineer / QA Ops / SRE} \hfill \textit{2020 – 2023}\\
+Implémentation GitOps, monitoring, automatisation. Grands projets SaaS (CRM sur-mesure avec Notion/Make).\\
+Cloud : AWS, Azure, GCP. Stack : Terraform, GitLab CI, Kustomize, Slack Bot, Opsgenie.
+
+\vspace{3mm}
+\textbf{Sogeti – Testeur de charge & Analyste Performance} \hfill \textit{2018 – 2020}\\
+LoadRunner, JMeter, Octoperf. Campagnes de test SAP & Web (Volkswagen), SNCF, banques.\\
+Création d'environnements Dockerisés de tests automatisés. Mise en place de Zabbix, Dynatrace, Grafana.
+
+\vspace{3mm}
+\textbf{Bouygues Telecom – QA Support Technique (via Sogeti)} \hfill \textit{2018 – 2019}\\
+Tests techniques (SOAP, ALM, UFT). Intégration fonctionnelle et automatisation.
+
+\vspace{3mm}
+\textbf{SPIE – Technicien Support IT} \hfill \textit{2017}\\
+Support pour l’Hôpital St-André de Bordeaux.
 }
